--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 dependencies = [
     "numpy>=1.24.0",
     "pandas>=2.0.0",
+    "pyarrow>=10.0.0",
     "scipy>=1.10.0",
     "pymc>=5.0.0",
     "arviz>=0.15.0",
