--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,16 +22,17 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Bio-Informatics",
 ]
 dependencies = [
+    "arviz>=0.20.0",
+    "biopython>=1.80",
+    "matplotlib>=3.7.0",
     "numpy>=1.24.0",
+    "numpyro>==0.19.0",
     "pandas>=2.0.0",
     "pyarrow>=10.0.0",
-    "scipy>=1.10.0",
     "pymc>=5.0.0",
-    "arviz>=0.15.0",
-    "scikit-learn>=1.3.0",
-    "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
-    "biopython>=1.80",
+    "scipy>=1.10.0",
+    "scikit-learn>=1.3.0",
     "SigProfilerMatrixGenerator>=1.2",
     "SigProfilerAssignment>=0.1.3",
 ]
