--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "biopython>=1.80",
     "matplotlib>=3.7.0",
     "numpy>=1.24.0",
-    "numpyro>==0.19.0",
+    "numpyro>=0.19.0",
     "pandas>=2.0.0",
     "pyarrow>=10.0.0",
     "pymc>=5.0.0",
